Added alias for shared folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "@dataset/raw": ["dataset/raw"],
       "@dataset/processed": ["dataset/processed"],
-      "@scripts/utils": ["scripts/utils"]
+      "@scripts/utils": ["scripts/utils"],
+      "@scripts/shared": ["scripts/shared"]
     }
   },
   "ts-node": {
