--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "ioredis": "^5.3.2",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
