Create and use @src alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "@dataset/processed": ["dataset/processed"],
       "@scripts/utils": ["scripts/utils"],
       "@scripts/shared": ["scripts/shared"],
-      "@shared/*": ["src/shared/*"]
+      "@shared/*": ["src/shared/*"],
+      "@src/*": ["src/*"]
     }
   },
   "ts-node": {
