Changed shared db alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
       "@dataset/processed": ["dataset/processed"],
       "@scripts/utils": ["scripts/utils"],
       "@scripts/shared": ["scripts/shared"],
-      "@shared/*": ["shared/*"],
+      "@shared/db": ["shared/db"],
       "@src/*": ["src/*"],
       "@entities": ["src/entity"]
     }
