--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/etag": "^1.8.3",
+    "etag": "^1.8.1",
     "ioredis": "^5.3.2",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
