--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@types/etag": "^1.8.3",
+    "class-validator": "^0.14.1",
     "etag": "^1.8.1",
     "ioredis": "^5.3.2",
     "pg": "^8.11.5",
