--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
     "@types/etag": "^1.8.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
